Fix spacing on dealer status logos

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -719,7 +719,7 @@ h1 {
     margin-top: 20px;
 }
 .dealer-status {
-    margin: 1rem 0;
+    margin: 4rem 0 0;
     display: grid;
     grid-template-columns: 75px 75px 75px;
     grid-template-rows: 75px 75px;
@@ -735,27 +735,7 @@ h1 {
 @media (min-width: 510px) {
     .dealer-status {
         grid-template-columns: 75px 75px 75px 75px 75px 75px;
-    grid-template-rows: 75px;
-    }
-}
-
-@media (min-width: 650px) {
-    .dealer-status {
-        grid-template-columns: 100px 100px 100px 100px 100px 100px;
-        grid-template-rows: 100px;
-    }
-    .dealer-status div {
-        width: 100px;
-        height: 100px; 
-    }
-}
-
-@media (min-width: 725px) {
-    .dealer-status {
-        grid-template-columns: 100px 100px 100px 100px 100px 100px;
-        grid-template-rows: 100px;
-        grid-column-gap: 25px;
-        grid-row-gap: 25px;
+        grid-template-rows: 75px;
     }
 }
 
@@ -773,12 +753,6 @@ h1 {
 
     .phone {
         font-size: 48px;
-    }
-}
-
-@media (min-width: 500px) {
-    .dealer-status .col-xs-2 {
-        width: 16.66666667%;
     }
 }
 
@@ -825,9 +799,6 @@ h1 {
 
     .service-list-item.vertical-align {
         display: block;
-    }
-    .dealer-status {
-        margin-top: 5rem;
     }
 }
 
@@ -921,10 +892,6 @@ h1 {
     #products {
         padding-bottom: 80px;
     }
-
-    .dealer-status .col-xs-2 {
-        padding: 0 2rem;
-    }
 }
 
 @media (min-width: 991px) {
@@ -972,12 +939,6 @@ h1 {
     }
     .fullscreen-bg {
         display: flex;
-    }
-    .dealer-status {
-        padding: 0;
-    }
-    .dealer-status .col-xs-2 {
-        padding: 0 3rem;
     }
 }
 
